<resources>
    <string name="app_name">SmartMobilityApp</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_flexible_intents">My flexible intents</string>
    <string name="menu_regular_intents">My regular intents</string>
    <string name="menu_report_an_event">Report an Event</string>
    <string name="menu_rate_a_ride">Rate a ride</string>
    <string name="menu_bookmarks">Bookmarks</string>
    <string name="schedule_a_flexible_trip">Schedule a flexible trip</string>
    <string name="select_day">Select day</string>
    <string name="select_intent">Select intent</string>
    <string name="optimize">Optimize</string>

    <string name="task_add_bookmark">Add bookmark</string>

    <string name="route_summary">Route summary</string>

    <string name="missing_text">TextView</string>
    <string name="my_bookmarks_fragment_title">My Bookmarks</string>
    <string name="_00_00">00:00</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="select">Select</string>
    <string name="report_action">Report</string>

    <string-array name="event_types_array">
        <item>Accident</item>
        <item>Redirected Traffic</item>
        <item>Construction Work</item>
        <item>Other</item>
    </string-array>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="profile_view">Profile View</string>
    <string name="profile_setup">Profile View</string>
    <string name="label">app_label</string>
    <string name="hint">hint</string>
    <string name="selectDestination">Select a destination</string>
    <string name="add_new_intent">Add New Intent</string>
    <string name="specify_the_day">Specify the day:</string>
    <string name="specify_intent_name">Specify intent name:</string>
    <string name="action_save">Save</string>
    <string name="action_discard">Discard</string>
    <string name="action_select_the_date">Select the Date</string>
    <string name="action_select_the_ride">Select the ride</string>
    <string name="action_tell_us_what_you_think">Tell us what you think!</string>
    <string name="action_rate">Submit Rating</string>
    <string name="userActivity">User Activity</string>

    <string name="username_error_string">Cannot be empty!</string>
    <string name="username_short_error_string">Length should be greater than 5</string>
    <string name="authentication_failed_string">Login failed. Username or password are incorrect!</string>
    <string name="authentication_success_string">Login successful!</string>
    <string name="company_specifications">Company specifications</string>
    <string name="home">Home</string>
    <string name="companyActivity">Company Activity</string>
    <string name="logout">Logout</string>

    <string name="schedule_a_regular_trip">Schedule a regular trip</string>
    <string name="days">Days</string>
    <string name="continueButton">Continue</string>

    <string name="car_driving_license">Car driving license</string>
    <string name="know_how_to_ride_a_bike">Know how to ride a bike</string>
    <string name="know_how_to_ride_an_electric_scooter">Know how to ride an electric scooter</string>
    <string name="maximum_walking_distance">Maximum walking distance</string>
    <string name="public_transport_pass">Public transport pass</string>
    <string name="possess_a_vehicle">Possess a vehicle</string>

</resources>