<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.uid.smartmobilityapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_flexible_intent_setup"
            app:destination="@id/nav_flexible_intent_setup" />
    </fragment>

    <fragment
        android:id="@+id/nav_flexible_intents"
        android:name="com.uid.smartmobilityapp.ui.my_flexible_intents.MyFlexibleIntentsFragment"
        android:label="@string/menu_flexible_intents"
        tools:layout="@layout/fragment_my_flexible_intents" />

    <fragment
        android:id="@+id/nav_regular_intents"
        android:name="com.uid.smartmobilityapp.ui.my_regular_intents.MyRegularIntentsFragment"
        android:label="@string/menu_regular_intents"
        tools:layout="@layout/fragment_my_regular_intents" />

    <fragment
        android:id="@+id/nav_report_event"
        android:name="com.uid.smartmobilityapp.ui.report_event.ReportEventFragment"
        android:label="@string/menu_report_an_event"
        tools:layout="@layout/fragment_report_event" />

    <fragment
        android:id="@+id/nav_rate_ride"
        android:name="com.uid.smartmobilityapp.ui.rate_ride.RateRideFragment"
        android:label="@string/menu_rate_a_ride"
        tools:layout="@layout/fragment_rate_ride" />

    <fragment
        android:id="@+id/nav_bookmarks"
        android:name="com.uid.smartmobilityapp.ui.bookmarks.BookmarksFragment"
        android:label="@string/menu_bookmarks"
        tools:layout="@layout/fragment_bookmarks" >
        <action
            android:id="@+id/action_nav_bookmarks_to_nav_add_bookmark"
            app:destination="@id/nav_add_bookmark" />
    </fragment>

    <fragment
        android:id="@+id/nav_add_bookmark"
        android:name="com.uid.smartmobilityapp.ui.bookmarks.AddBookmarkFragment"
        android:label="@string/task_add_bookmark"
        tools:layout="@layout/fragment_add_bookmark" />

    <fragment
        android:id="@+id/nav_flexible_intent_setup"
        android:name="com.uid.smartmobilityapp.ui.flexible_intent.FlexibleIntentSetupFragment"
        android:label="@string/schedule_a_flexible_trip"
        tools:layout="@layout/fragment_flexible_intent_setup" >
        <action
            android:id="@+id/action_nav_flexible_intent_setup_to_nav_flexible_intent_select_transport"
            app:destination="@id/nav_flexible_intent_select_transport" />
    </fragment>

    <fragment
        android:id="@+id/nav_flexible_intent_select_transport"
        android:name="com.uid.smartmobilityapp.ui.flexible_intent.FlexibleIntentSelectTransportFragment"
        android:label="@string/next"
        tools:layout="@layout/fragment_flexible_intent_select_transport" >
        <action
            android:id="@+id/action_nav_flexible_intent_select_transport_to_nav_flexible_intent_select_optimization"
            app:destination="@id/nav_flexible_intent_select_optimization" />
    </fragment>

    <fragment
        android:id="@+id/nav_flexible_intent_select_optimization"
        android:name="com.uid.smartmobilityapp.ui.flexible_intent.FlexibleIntentSelectOptimizationFragment"
        android:label="@string/next"
        tools:layout="@layout/fragment_flexible_intent_select_optimization" >
        <action
            android:id="@+id/action_nav_flexible_intent_select_optimization_to_nav_flexible_intent_success"
            app:destination="@id/nav_flexible_intent_success" />
    </fragment>

    <fragment
        android:id="@+id/nav_flexible_intent_success"
        android:name="com.uid.smartmobilityapp.ui.flexible_intent.FlexibleIntentSuccessFragment"
        android:label="@string/next"
        tools:layout="@layout/fragment_flexible_intent_success" >
        <action
            android:id="@+id/action_nav_flexible_intent_success_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>

</navigation>