<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.flexible_intent.FlexibleIntentSetupFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <TextView
            android:id="@+id/label2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/specify_intent_name"
            android:textSize="@dimen/subtitle_size"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/selectIntentInputID"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="285dp"
            android:layout_height="63dp"
            android:layout_marginVertical="20dp"
            android:hint="@string/select_intent"
            app:boxStrokeColor="@color/purple_700"
            app:hintTextColor="@color/purple_700">

            <AutoCompleteTextView
                android:id="@+id/selectIntentAutoCompleteID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/specifyTheDayNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:text="@string/specify_the_day"
            android:textSize="@dimen/subtitle_size"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/selectDayInputID"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="285dp"
            android:layout_height="63dp"
            android:layout_marginTop="20dp"
            android:hint="@string/select_day"
            app:boxStrokeColor="@color/purple_700"
            app:hintTextColor="@color/purple_700"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.119"
            app:layout_constraintStart_toStartOf="@+id/specifyTheDayNameLabel"
            app:layout_constraintTop_toBottomOf="@+id/specifyTheDayNameLabel">

            <AutoCompleteTextView
                android:id="@+id/selectDayAutoCompleteID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/nextButtonID"
            android:layout_width="157dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:backgroundTint="@color/purple_700"
            android:text="@string/next"
            android:textAllCaps="false"
            app:cornerRadius="@dimen/button_corner_radius" />

        <Button
            android:id="@+id/addNewIntentButtonID"
            android:layout_width="159dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/add_new_intent"
            android:textAllCaps="false"
            app:cornerRadius="@dimen/button_corner_radius" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>